# f1-25-telemetry

./: .env.example  .gitignore  README.md  pyproject.toml
f1_25_telemetry/: __init__.py  appendices.py  influxdb.py  listener.py  main.py  packets.py  settings.py
