[project]
name = "f1-25-telemetry"
version = "0.1.0"
description = "Decode F1 25 telemetry UDP data and convert to InfluxDB points."
authors = [{ name = "Chris Hannam", email = "ch@chrishannam.co.uk" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
influxdb = [
    "influxdb-client>=1.40.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
f1-25-telemetry = "f1_25_telemetry.main:main"

[project.urls]
Homepage = "https://github.com/chrishannam/f1-25-telemetry"
"Bug Tracker" = "https://github.com/chrishannam/f1-25-telemetry/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["f1_25_telemetry"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
